[Editorial] Add periods to stage directions

--- a/src/epub/text/act-1.xhtml
+++ b/src/epub/text/act-1.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter NORFOLK at one door; at the other, BUCKINGHAM and ABERGAVENNY</i>
+								<i epub:type="z3998:stage-direction">Enter NORFOLK at one door; at the other, BUCKINGHAM and ABERGAVENNY.</i>
 							</td>
 						</tr>
 						<tr>
@@ -440,7 +440,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY, the purse borne before him, certain of the Guard, and two Secretaries with papers. CARDINAL WOLSEY in his passage fixeth his eye on BUCKINGHAM, and BUCKINGHAM on him, both full of disdain</i>
+								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY, the purse borne before him, certain of the Guard, and two Secretaries with papers. CARDINAL WOLSEY in his passage fixeth his eye on BUCKINGHAM, and BUCKINGHAM on him, both full of disdain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -471,7 +471,7 @@
 								<p>
 									<span>Well, we shall then know more; and Buckingham</span>
 									<br/>
-									<span>Shall lessen this big look. <i epub:type="z3998:stage-direction">Exeunt CARDINAL WOLSEY and his Train</i></span>
+									<span>Shall lessen this big look. <i epub:type="z3998:stage-direction">Exeunt CARDINAL WOLSEY and his Train.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -724,7 +724,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter BRANDON, a Sergeant-at-arms before him, and two or three of the Guard</i>
+								<i epub:type="z3998:stage-direction">Enter BRANDON, a Sergeant-at-arms before him, and two or three of the Guard.</i>
 							</td>
 						</tr>
 						<tr>
@@ -793,7 +793,7 @@
 							<td epub:type="z3998:persona">BRANDON</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Nay, he must bear you company. The king <i epub:type="z3998:stage-direction">To ABERGAVENNY</i></span>
+									<span>Nay, he must bear you company. The king <i epub:type="z3998:stage-direction">To ABERGAVENNY.</i></span>
 									<br/>
 									<span>Is pleased you shall to the Tower, till you know</span>
 									<br/>
@@ -861,7 +861,7 @@
 									<br/>
 									<span>Whose figure even this instant cloud puts on,</span>
 									<br/>
-									<span>By darkening my clear sun. My lord, farewell. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>By darkening my clear sun. My lord, farewell. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -879,7 +879,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Cornets. Enter KING HENRY VIII, leaning on CARDINAL WOLSEY's shoulder, the Nobles, and LOVELL; CARDINAL WOLSEY places himself under KING HENRY VIII's feet on his right side</i>
+								<i epub:type="z3998:stage-direction">Cornets. Enter KING HENRY VIII, leaning on CARDINAL WOLSEY's shoulder, the Nobles, and LOVELL; CARDINAL WOLSEY places himself under KING HENRY VIII's feet on his right side.</i>
 							</td>
 						</tr>
 						<tr>
@@ -907,7 +907,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">A noise within, crying 'Room for the Queen!' Enter QUEEN KATHARINE, ushered by NORFOLK, and SUFFOLK: she kneels. KING HENRY VIII riseth from his state, takes her up, kisses and placeth her by him</i>
+								<i epub:type="z3998:stage-direction">A noise within, crying 'Room for the Queen!' Enter QUEEN KATHARINE, ushered by NORFOLK, and SUFFOLK: she kneels. KING HENRY VIII riseth from his state, takes her up, kisses and placeth her by him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1200,7 +1200,7 @@
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>A word with you. <i epub:type="z3998:stage-direction">To the Secretary</i></span>
+									<span>A word with you. <i epub:type="z3998:stage-direction">To the Secretary.</i></span>
 									<br/>
 									<span>Let there be letters writ to every shire,</span>
 									<br/>
@@ -1212,14 +1212,14 @@
 									<br/>
 									<span>And pardon comes: I shall anon advise you</span>
 									<br/>
-									<span>Further in the proceeding. <i epub:type="z3998:stage-direction">Exit Secretary</i></span>
+									<span>Further in the proceeding. <i epub:type="z3998:stage-direction">Exit Secretary.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Surveyor</i>
+								<i epub:type="z3998:stage-direction">Enter Surveyor.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1602,7 +1602,7 @@
 									<br/>
 									<span>Let him not seek 't of us: by day and night,</span>
 									<br/>
-									<span>He's traitor to the height. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>He's traitor to the height. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1620,7 +1620,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chamberlain and SANDS</i>
+								<i epub:type="z3998:stage-direction">Enter Chamberlain and SANDS.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1690,7 +1690,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter LOVELL</i>
+								<i epub:type="z3998:stage-direction">Enter LOVELL.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1935,7 +1935,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SANDS</td>
-							<td>I am your lordship's. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>I am your lordship's. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -1951,7 +1951,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys. A small table under a state for CARDINAL WOLSEY, a longer table for the guests. Then enter ANNE and divers other Ladies and Gentlemen as guests, at one door; at another door, enter GUILDFORD</i>
+								<i epub:type="z3998:stage-direction">Hautboys. A small table under a state for CARDINAL WOLSEY, a longer table for the guests. Then enter ANNE and divers other Ladies and Gentlemen as guests, at one door; at another door, enter GUILDFORD.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1977,7 +1977,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chamberlain, SANDS, and LOVELL</i>
+								<i epub:type="z3998:stage-direction">Enter Chamberlain, SANDS, and LOVELL.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2082,7 +2082,7 @@
 									<br/>
 									<span>But he would bite none; just as I do now,</span>
 									<br/>
-									<span>He would kiss you twenty with a breath. <i epub:type="z3998:stage-direction">Kisses her</i></span>
+									<span>He would kiss you twenty with a breath. <i epub:type="z3998:stage-direction">Kisses her.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2113,7 +2113,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys. Enter CARDINAL WOLSEY, and takes his state</i>
+								<i epub:type="z3998:stage-direction">Hautboys. Enter CARDINAL WOLSEY, and takes his state.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2126,7 +2126,7 @@
 									<br/>
 									<span>Is not my friend: this, to confirm my welcome;</span>
 									<br/>
-									<span>And to you all, good health. <i epub:type="z3998:stage-direction">Drinks</i></span>
+									<span>And to you all, good health. <i epub:type="z3998:stage-direction">Drinks.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2196,7 +2196,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SANDS</td>
-							<td>I told your grace they would talk anon. <i epub:type="z3998:stage-direction">Drum and trumpet, chambers discharged</i></td>
+							<td>I told your grace they would talk anon. <i epub:type="z3998:stage-direction">Drum and trumpet, chambers discharged.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
@@ -2204,7 +2204,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Chamberlain</td>
-							<td>Look out there, some of ye. <i epub:type="z3998:stage-direction">Exit Servant</i></td>
+							<td>Look out there, some of ye. <i epub:type="z3998:stage-direction">Exit Servant.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
@@ -2221,7 +2221,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter Servant</i>
+								<i epub:type="z3998:stage-direction">Re-enter Servant.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2254,7 +2254,7 @@
 									<br/>
 									<span>Into our presence, where this heaven of beauty</span>
 									<br/>
-									<span>Shall shine at full upon them. Some attend him. <i epub:type="z3998:stage-direction">Exit Chamberlain, attended. All rise, and tables removed</i></span>
+									<span>Shall shine at full upon them. Some attend him. <i epub:type="z3998:stage-direction">Exit Chamberlain, attended. All rise, and tables removed.</i></span>
 									<br/>
 									<span>You have now a broken banquet; but we'll mend it.</span>
 									<br/>
@@ -2267,7 +2267,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Hautboys. Enter KING HENRY VIII and others, as masquers, habited like shepherds, ushered by the Chamberlain. They pass directly before CARDINAL WOLSEY, and gracefully salute him</i>
+								<i epub:type="z3998:stage-direction">Hautboys. Enter KING HENRY VIII and others, as masquers, habited like shepherds, ushered by the Chamberlain. They pass directly before CARDINAL WOLSEY, and gracefully salute him.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2304,7 +2304,7 @@
 									<br/>
 									<span>They have done my poor house grace; for which I pay 'em</span>
 									<br/>
-									<span>A thousand thanks, and pray 'em take their pleasures. <i epub:type="z3998:stage-direction">They choose Ladies for the dance. KING HENRY VIII chooses ANNE</i></span>
+									<span>A thousand thanks, and pray 'em take their pleasures. <i epub:type="z3998:stage-direction">They choose Ladies for the dance. KING HENRY VIII chooses ANNE.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2314,7 +2314,7 @@
 								<p>
 									<span>The fairest hand I ever touch'd! O beauty,</span>
 									<br/>
-									<span>Till now I never knew thee! <i epub:type="z3998:stage-direction">Music. Dance</i></span>
+									<span>Till now I never knew thee! <i epub:type="z3998:stage-direction">Music. Dance.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2344,7 +2344,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Chamberlain</td>
-							<td>I will, my lord. <i epub:type="z3998:stage-direction">Whispers the Masquers</i></td>
+							<td>I will, my lord. <i epub:type="z3998:stage-direction">Whispers the Masquers.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
@@ -2378,7 +2378,7 @@
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Ye have found him, cardinal: <i epub:type="z3998:stage-direction">Unmasking</i></span>
+									<span>Ye have found him, cardinal: <i epub:type="z3998:stage-direction">Unmasking.</i></span>
 									<br/>
 									<span>You hold a fair assembly; you do well, lord:</span>
 									<br/>
@@ -2484,7 +2484,7 @@
 									<br/>
 									<span>To lead 'em once again; and then let's dream</span>
 									<br/>
-									<span>Who's best in favour. Let the music knock it. <i epub:type="z3998:stage-direction">Exeunt with trumpets</i></span>
+									<span>Who's best in favour. Let the music knock it. <i epub:type="z3998:stage-direction">Exeunt with trumpets.</i></span>
 								</p>
 							</td>
 						</tr>
