--- a/src/epub/text/act-2.xhtml
+++ b/src/epub/text/act-2.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter two Gentlemen, meeting</i>
+								<i epub:type="z3998:stage-direction">Enter two Gentlemen, meeting.</i>
 							</td>
 						</tr>
 						<tr>
@@ -268,7 +268,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter BUCKINGHAM from his arraignment; tip-staves before him; the axe with the edge towards him; halberds on each side: accompanied with LOVELL, VAUX, SANDS, and common people</i>
+								<i epub:type="z3998:stage-direction">Enter BUCKINGHAM from his arraignment; tip-staves before him; the axe with the edge towards him; halberds on each side: accompanied with LOVELL, VAUX, SANDS, and common people.</i>
 							</td>
 						</tr>
 						<tr>
@@ -473,7 +473,7 @@
 									<br/>
 									<span>And when you would say something that is sad,</span>
 									<br/>
-									<span>Speak how I fell. I have done; and God forgive me! <i epub:type="z3998:stage-direction">Exeunt BUCKINGHAM and Train</i></span>
+									<span>Speak how I fell. I have done; and God forgive me! <i epub:type="z3998:stage-direction">Exeunt BUCKINGHAM and Train.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -621,7 +621,7 @@
 									<br/>
 									<span>We are too open here to argue this;</span>
 									<br/>
-									<span>Let's think in private more. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>Let's think in private more. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -639,7 +639,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chamberlain, reading a letter</i>
+								<i epub:type="z3998:stage-direction">Enter Chamberlain, reading a letter.</i>
 							</td>
 						</tr>
 						<tr>
@@ -657,7 +657,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter, to Chamberlain, NORFOLK and SUFFOLK</i>
+								<i epub:type="z3998:stage-direction">Enter, to Chamberlain, NORFOLK and SUFFOLK.</i>
 							</td>
 						</tr>
 						<tr>
@@ -850,7 +850,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">NORFOLK</td>
-							<td>Thanks, my good lord chamberlain. <i epub:type="z3998:stage-direction">Exit Chamberlain; and KING HENRY VIII draws the curtain, and sits reading pensively</i></td>
+							<td>Thanks, my good lord chamberlain. <i epub:type="z3998:stage-direction">Exit Chamberlain; and KING HENRY VIII draws the curtain, and sits reading pensively.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SUFFOLK</td>
@@ -905,7 +905,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CARDINAL CAMPEIUS, with a commission</i>
+								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CARDINAL CAMPEIUS, with a commission.</i>
 							</td>
 						</tr>
 						<tr>
@@ -916,11 +916,11 @@
 									<br/>
 									<span>The quiet of my wounded conscience;</span>
 									<br/>
-									<span>Thou art a cure fit for a king. <i epub:type="z3998:stage-direction">To CARDINAL CAMPEIUS</i> You're welcome,</span>
+									<span>Thou art a cure fit for a king. <i epub:type="z3998:stage-direction">To CARDINAL CAMPEIUS.</i> You're welcome,</span>
 									<br/>
 									<span>Most learned reverend sir, into our kingdom:</span>
 									<br/>
-									<span>Use us and it. <i epub:type="z3998:stage-direction">To CARDINAL WOLSEY</i></span>
+									<span>Use us and it. <i epub:type="z3998:stage-direction">To CARDINAL WOLSEY.</i></span>
 									<br/>
 									<span>My good lord, have great care</span>
 									<br/>
@@ -942,17 +942,17 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
-							<td><i epub:type="z3998:stage-direction">To NORFOLK and SUFFOLK</i> We are busy; go.</td>
+							<td><i epub:type="z3998:stage-direction">To NORFOLK and SUFFOLK.</i> We are busy; go.</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">NORFOLK</td>
-							<td><i epub:type="z3998:stage-direction">Aside to SUFFOLK</i> This priest has no pride in him?</td>
+							<td><i epub:type="z3998:stage-direction">Aside to SUFFOLK.</i> This priest has no pride in him?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SUFFOLK</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to NORFOLK</i> Not to speak of:</span>
+									<span><i epub:type="z3998:stage-direction">Aside to NORFOLK.</i> Not to speak of:</span>
 									<br/>
 									<span>I would not be so sick though for his place:</span>
 									<br/>
@@ -964,7 +964,7 @@
 							<td epub:type="z3998:persona">NORFOLK</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to SUFFOLK</i> If it do,</span>
+									<span><i epub:type="z3998:stage-direction">Aside to SUFFOLK.</i> If it do,</span>
 									<br/>
 									<span>I'll venture one have-at-him.</span>
 								</p>
@@ -972,7 +972,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SUFFOLK</td>
-							<td><i epub:type="z3998:stage-direction">Aside to NORFOLK</i> I another. <i epub:type="z3998:stage-direction">Exeunt NORFOLK and SUFFOLK</i></td>
+							<td><i epub:type="z3998:stage-direction">Aside to NORFOLK.</i> I another. <i epub:type="z3998:stage-direction">Exeunt NORFOLK and SUFFOLK.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
@@ -1070,21 +1070,21 @@
 									<br/>
 									<span>Prithee, call Gardiner to me, my new secretary:</span>
 									<br/>
-									<span>I find him a fit fellow. <i epub:type="z3998:stage-direction">Exit CARDINAL WOLSEY</i></span>
+									<span>I find him a fit fellow. <i epub:type="z3998:stage-direction">Exit CARDINAL WOLSEY.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter CARDINAL WOLSEY, with GARDINER</i>
+								<i epub:type="z3998:stage-direction">Re-enter CARDINAL WOLSEY, with GARDINER.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside to GARDINER</i> Give me your hand much joy and</span>
+									<span><i epub:type="z3998:stage-direction">Aside to GARDINER.</i> Give me your hand much joy and</span>
 									<br/>
 									<span>favour to you;</span>
 									<br/>
@@ -1097,7 +1097,7 @@
 							<td epub:type="z3998:verse">
 								<p>
 									<span>
-										<i epub:type="z3998:stage-direction">Aside to CARDINAL WOLSEY</i>
+										<i epub:type="z3998:stage-direction">Aside to CARDINAL WOLSEY.</i>
 									</span>
 									<br/>
 									<span>But to be commanded</span>
@@ -1108,7 +1108,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
-							<td>Come hither, Gardiner. <i epub:type="z3998:stage-direction">Walks and whispers</i></td>
+							<td>Come hither, Gardiner. <i epub:type="z3998:stage-direction">Walks and whispers.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL CAMPEIUS</td>
@@ -1184,7 +1184,7 @@
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Deliver this with modesty to the queen. <i epub:type="z3998:stage-direction">Exit GARDINER</i></span>
+									<span>Deliver this with modesty to the queen. <i epub:type="z3998:stage-direction">Exit GARDINER.</i></span>
 									<br/>
 									<span>The most convenient place that I can think of</span>
 									<br/>
@@ -1198,7 +1198,7 @@
 									<br/>
 									<span>So sweet a bedfellow? But, conscience, conscience!</span>
 									<br/>
-									<span>O, 'tis a tender place; and I must leave her. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>O, 'tis a tender place; and I must leave her. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1216,7 +1216,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter ANNE and an Old Lady</i>
+								<i epub:type="z3998:stage-direction">Enter ANNE and an Old Lady.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1420,7 +1420,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chamberlain</i>
+								<i epub:type="z3998:stage-direction">Enter Chamberlain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1517,7 +1517,7 @@
 									<br/>
 									<span>I shall not fail to approve the fair conceit</span>
 									<br/>
-									<span>The king hath of you. <i epub:type="z3998:stage-direction">Aside</i> I have perused her well;</span>
+									<span>The king hath of you. <i epub:type="z3998:stage-direction">Aside.</i> I have perused her well;</span>
 									<br/>
 									<span>Beauty and honour in her are so mingled</span>
 									<br/>
@@ -1527,7 +1527,7 @@
 									<br/>
 									<span>To lighten all this isle? I'll to the king,</span>
 									<br/>
-									<span>And say I spoke with you. <i epub:type="z3998:stage-direction">Exit Chamberlain</i></span>
+									<span>And say I spoke with you. <i epub:type="z3998:stage-direction">Exit Chamberlain.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1625,7 +1625,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Old Lady</td>
-							<td>What do you think me? <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>What do you think me? <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -1641,7 +1641,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Trumpets, sennet, and cornets. Enter two Vergers, with short silver wands; next them, two Scribes, in the habit of doctors; after them, CANTERBURY alone; after him, LINCOLN, Ely, Rochester, and Saint Asaph; next them, with some small distance, follows a Gentleman bearing the purse, with the great seal, and a cardinal's hat; then two Priests, bearing each a silver cross; then a Gentleman-usher bare-headed, accompanied with a Sergeant-at-arms bearing a silver mace; then two Gentlemen bearing two great silver pillars; after them, side by side, CARDINAL WOLSEY and CARDINAL CAMPEIUS; two Noblemen with the sword and mace. KING HENRY VIII takes place under the cloth of state; CARDINAL WOLSEY and CARDINAL CAMPEIUS sit under him as judges. QUEEN KATHARINE takes place some distance from KING HENRY VIII. The Bishops place themselves on each side the court, in manner of a consistory; below them, the Scribes. The Lords sit next the Bishops. The rest of the Attendants stand in convenient order about the stage</i>
+								<i epub:type="z3998:stage-direction">Trumpets, sennet, and cornets. Enter two Vergers, with short silver wands; next them, two Scribes, in the habit of doctors; after them, CANTERBURY alone; after him, LINCOLN, Ely, Rochester, and Saint Asaph; next them, with some small distance, follows a Gentleman bearing the purse, with the great seal, and a cardinal's hat; then two Priests, bearing each a silver cross; then a Gentleman-usher bare-headed, accompanied with a Sergeant-at-arms bearing a silver mace; then two Gentlemen bearing two great silver pillars; after them, side by side, CARDINAL WOLSEY and CARDINAL CAMPEIUS; two Noblemen with the sword and mace. KING HENRY VIII takes place under the cloth of state; CARDINAL WOLSEY and CARDINAL CAMPEIUS sit under him as judges. QUEEN KATHARINE takes place some distance from KING HENRY VIII. The Bishops place themselves on each side the court, in manner of a consistory; below them, the Scribes. The Lords sit next the Bishops. The rest of the Attendants stand in convenient order about the stage.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1695,7 +1695,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">QUEEN KATHARINE makes no answer, rises out of her chair, goes about the court, comes to KING HENRY VIII, and kneels at his feet; then speaks</i>
+								<i epub:type="z3998:stage-direction">QUEEN KATHARINE makes no answer, rises out of her chair, goes about the court, comes to KING HENRY VIII, and kneels at his feet; then speaks.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1982,7 +1982,7 @@
 									<br/>
 									<span>To bring my whole cause 'fore his holiness,</span>
 									<br/>
-									<span>And to be judged by him. <i epub:type="z3998:stage-direction">She curtsies to KING HENRY VIII, and offers to depart</i></span>
+									<span>And to be judged by him. <i epub:type="z3998:stage-direction">She curtsies to KING HENRY VIII, and offers to depart.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2026,7 +2026,7 @@
 									<br/>
 									<span>Upon this business my appearance make</span>
 									<br/>
-									<span>In any of their courts. <i epub:type="z3998:stage-direction">Exeunt QUEEN KATHARINE and her Attendants</i></span>
+									<span>In any of their courts. <i epub:type="z3998:stage-direction">Exeunt QUEEN KATHARINE and her Attendants.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -2296,7 +2296,7 @@
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> I may perceive</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> I may perceive</span>
 									<br/>
 									<span>These cardinals trifle with me: I abhor</span>
 									<br/>
@@ -2308,7 +2308,7 @@
 									<br/>
 									<span>My comfort comes along. Break up the court:</span>
 									<br/>
-									<span>I say, set on. <i epub:type="z3998:stage-direction">Exeunt in manner as they entered</i></span>
+									<span>I say, set on. <i epub:type="z3998:stage-direction">Exeunt in manner as they entered.</i></span>
 								</p>
 							</td>
 						</tr>
