--- a/src/epub/text/act-3.xhtml
+++ b/src/epub/text/act-3.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter QUEEN KATHARINE and her Women, as at work</i>
+								<i epub:type="z3998:stage-direction">Enter QUEEN KATHARINE and her Women, as at work.</i>
 							</td>
 						</tr>
 						<tr>
@@ -34,7 +34,7 @@
 									<span>Sing, and disperse 'em, if thou canst: leave working.</span>
 									<br/>
 									<span>
-										<i epub:type="z3998:stage-direction">SONG</i>
+										<i epub:type="z3998:stage-direction">SONG.</i>
 									</span>
 									<br/>
 									<span>Orpheus with his lute made trees,</span>
@@ -66,7 +66,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Gentleman</i>
+								<i epub:type="z3998:stage-direction">Enter a Gentleman.</i>
 							</td>
 						</tr>
 						<tr>
@@ -97,7 +97,7 @@
 								<p>
 									<span>Pray their graces</span>
 									<br/>
-									<span>To come near. <i epub:type="z3998:stage-direction">Exit Gentleman</i></span>
+									<span>To come near. <i epub:type="z3998:stage-direction">Exit Gentleman.</i></span>
 									<br/>
 									<span>What can be their business</span>
 									<br/>
@@ -114,7 +114,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CARDINAL CAMPEIUS</i>
+								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CARDINAL CAMPEIUS.</i>
 							</td>
 						</tr>
 						<tr>
@@ -263,7 +263,7 @@
 							<td epub:type="z3998:persona">QUEEN KATHARINE</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> To betray me.--</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> To betray me.--</span>
 									<br/>
 									<span>My lords, I thank you both for your good wills;</span>
 									<br/>
@@ -609,7 +609,7 @@
 									<br/>
 									<span>That little thought, when she set footing here,</span>
 									<br/>
-									<span>She should have bought her dignities so dear. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>She should have bought her dignities so dear. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -627,7 +627,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter NORFOLK, SUFFOLK, SURREY, and Chamberlain</i>
+								<i epub:type="z3998:stage-direction">Enter NORFOLK, SUFFOLK, SURREY, and Chamberlain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -977,7 +977,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CROMWELL</i>
+								<i epub:type="z3998:stage-direction">Enter CARDINAL WOLSEY and CROMWELL.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1036,9 +1036,9 @@
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Leave me awhile. <i epub:type="z3998:stage-direction">Exit CROMWELL</i></span>
+									<span>Leave me awhile. <i epub:type="z3998:stage-direction">Exit CROMWELL.</i></span>
 									<br/>
-									<span><i epub:type="z3998:stage-direction">Aside</i> It shall be to the Duchess of Alencon,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> It shall be to the Duchess of Alencon,</span>
 									<br/>
 									<span>The French king's sister: he shall marry her.</span>
 									<br/>
@@ -1080,7 +1080,7 @@
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> The late queen's gentlewoman,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> The late queen's gentlewoman,</span>
 									<br/>
 									<span>a knight's daughter,</span>
 									<br/>
@@ -1123,7 +1123,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter KING HENRY VIII, reading of a schedule, and LOVELL</i>
+								<i epub:type="z3998:stage-direction">Enter KING HENRY VIII, reading of a schedule, and LOVELL.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1222,7 +1222,7 @@
 									<br/>
 									<span>His thinkings are below the moon, not worth</span>
 									<br/>
-									<span>His serious considering. <i epub:type="z3998:stage-direction">King HENRY VIII takes his seat; whispers LOVELL, who goes to CARDINAL WOLSEY</i></span>
+									<span>His serious considering. <i epub:type="z3998:stage-direction">King HENRY VIII takes his seat; whispers LOVELL, who goes to CARDINAL WOLSEY.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1320,11 +1320,11 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CARDINAL WOLSEY</td>
-							<td><i epub:type="z3998:stage-direction">Aside</i> What should this mean?</td>
+							<td><i epub:type="z3998:stage-direction">Aside.</i> What should this mean?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">SURREY</td>
-							<td><i epub:type="z3998:stage-direction">Aside</i> The Lord increase this business!</td>
+							<td><i epub:type="z3998:stage-direction">Aside.</i> The Lord increase this business!</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
@@ -1440,11 +1440,11 @@
 									<br/>
 									<span>Take notice, lords, he has a loyal breast,</span>
 									<br/>
-									<span>For you have seen him open't. Read o'er this; <i epub:type="z3998:stage-direction">Giving him papers</i></span>
+									<span>For you have seen him open't. Read o'er this; <i epub:type="z3998:stage-direction">Giving him papers.</i></span>
 									<br/>
 									<span>And after, this: and then to breakfast with</span>
 									<br/>
-									<span>What appetite you have. <i epub:type="z3998:stage-direction">Exit KING HENRY VIII, frowning upon CARDINAL WOLSEY: the Nobles throng after him, smiling and whispering</i></span>
+									<span>What appetite you have. <i epub:type="z3998:stage-direction">Exit KING HENRY VIII, frowning upon CARDINAL WOLSEY: the Nobles throng after him, smiling and whispering.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1507,7 +1507,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter to CARDINAL WOLSEY, NORFOLK and SUFFOLK, SURREY, and the Chamberlain</i>
+								<i epub:type="z3998:stage-direction">Re-enter to CARDINAL WOLSEY, NORFOLK and SUFFOLK, SURREY, and the Chamberlain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1934,7 +1934,7 @@
 									<br/>
 									<span>The king shall know it, and, no doubt, shall thank you.</span>
 									<br/>
-									<span>So fare you well, my little good lord cardinal. <i epub:type="z3998:stage-direction">Exeunt all but CARDINAL WOLSEY</i></span>
+									<span>So fare you well, my little good lord cardinal. <i epub:type="z3998:stage-direction">Exeunt all but CARDINAL WOLSEY.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1993,7 +1993,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CROMWELL, and stands amazed</i>
+								<i epub:type="z3998:stage-direction">Enter CROMWELL, and stands amazed.</i>
 							</td>
 						</tr>
 						<tr>
@@ -2274,7 +2274,7 @@
 								<p>
 									<span>So I have. Farewell</span>
 									<br/>
-									<span>The hopes of court! my hopes in heaven do dwell. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>The hopes of court! my hopes in heaven do dwell. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
