--- a/src/epub/text/act-4.xhtml
+++ b/src/epub/text/act-4.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter two Gentlemen, meeting one another</i>
+								<i epub:type="z3998:stage-direction">Enter two Gentlemen, meeting one another.</i>
 							</td>
 						</tr>
 						<tr>
@@ -165,9 +165,9 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Alas, good lady! <i epub:type="z3998:stage-direction">Trumpets</i></span>
+									<span>Alas, good lady! <i epub:type="z3998:stage-direction">Trumpets.</i></span>
 									<br/>
-									<span>The trumpets sound: stand close, the queen is coming. <i epub:type="z3998:stage-direction">Hautboys</i></span>
+									<span>The trumpets sound: stand close, the queen is coming. <i epub:type="z3998:stage-direction">Hautboys.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -195,7 +195,7 @@
 									</li>
 									<li>
 										<p>
-											<i epub:type="z3998:stage-direction">Choristers, singing. <i epub:type="z3998:stage-direction">Music</i></i>
+											<i epub:type="z3998:stage-direction">Choristers, singing.</i> <i epub:type="z3998:stage-direction">Music.</i>
 										</p>
 									</li>
 									<li>
@@ -230,7 +230,7 @@
 									</li>
 								</ol>
 								<p>
-									<i epub:type="z3998:stage-direction">They pass over the stage in order and state</i>
+									<i epub:type="z3998:stage-direction">They pass over the stage in order and state.</i>
 								</p>
 							</td>
 						</tr>
@@ -280,7 +280,7 @@
 							<td epub:type="z3998:persona">Second Gentleman</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on QUEEN ANNE</i></span>
+									<span>Heaven bless thee! <i epub:type="z3998:stage-direction">Looking on QUEEN ANNE.</i></span>
 									<br/>
 									<span>Thou hast the sweetest face I ever look'd on.</span>
 									<br/>
@@ -334,12 +334,12 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">First Gentleman</td>
-							<td>No more of that. <i epub:type="z3998:stage-direction">Exit procession, and then a great flourish of trumpets</i></td>
+							<td>No more of that. <i epub:type="z3998:stage-direction">Exit procession, and then a great flourish of trumpets.</i></td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a third Gentleman</i>
+								<i epub:type="z3998:stage-direction">Enter a third Gentleman.</i>
 							</td>
 						</tr>
 						<tr>
@@ -580,7 +580,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Both</td>
-							<td>You may command us, sir. <i epub:type="z3998:stage-direction">Exeunt</i></td>
+							<td>You may command us, sir. <i epub:type="z3998:stage-direction">Exeunt.</i></td>
 						</tr>
 					</tbody>
 				</table>
@@ -596,7 +596,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter KATHARINE, Dowager, sick; led between GRIFFITH, her gentleman usher, and PATIENCE, her woman</i>
+								<i epub:type="z3998:stage-direction">Enter KATHARINE, Dowager, sick; led between GRIFFITH, her gentleman usher, and PATIENCE, her woman.</i>
 							</td>
 						</tr>
 						<tr>
@@ -831,7 +831,7 @@
 									<br/>
 									<span>I named my knell, whilst I sit meditating</span>
 									<br/>
-									<span>On that celestial harmony I go to. <i epub:type="z3998:stage-direction">Sad and solemn music</i></span>
+									<span>On that celestial harmony I go to. <i epub:type="z3998:stage-direction">Sad and solemn music.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -848,7 +848,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">The vision. Enter, solemnly tripping one after another, six personages, clad in white robes, wearing on their heads garlands of bays, and golden vizards on their faces; branches of bays or palm in their hands. They first congee unto her, then dance; and, at certain changes, the first two hold a spare garland over her head; at which the other four make reverent curtsies; then the two that held the garland deliver the same to the other next two, who observe the same order in their changes, and holding the garland over her head: which done, they deliver the same garland to the last two, who likewise observe the same order: at which, as it were by inspiration, she makes in her sleep signs of rejoicing, and holdeth up her hands to heaven: and so in their dancing vanish, carrying the garland with them. The music continues</i>
+								<i epub:type="z3998:stage-direction">The vision. Enter, solemnly tripping one after another, six personages, clad in white robes, wearing on their heads garlands of bays, and golden vizards on their faces; branches of bays or palm in their hands. They first congee unto her, then dance; and, at certain changes, the first two hold a spare garland over her head; at which the other four make reverent curtsies; then the two that held the garland deliver the same to the other next two, who observe the same order in their changes, and holding the garland over her head: which done, they deliver the same garland to the last two, who likewise observe the same order: at which, as it were by inspiration, she makes in her sleep signs of rejoicing, and holdeth up her hands to heaven: and so in their dancing vanish, carrying the garland with them. The music continues.</i>
 							</td>
 						</tr>
 						<tr>
@@ -913,7 +913,7 @@
 								<p>
 									<span>Bid the music leave,</span>
 									<br/>
-									<span>They are harsh and heavy to me. <i epub:type="z3998:stage-direction">Music ceases</i></span>
+									<span>They are harsh and heavy to me. <i epub:type="z3998:stage-direction">Music ceases.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -942,7 +942,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter a Messenger</i>
+								<i epub:type="z3998:stage-direction">Enter a Messenger.</i>
 							</td>
 						</tr>
 						<tr>
@@ -989,14 +989,14 @@
 								<p>
 									<span>Admit him entrance, Griffith: but this fellow</span>
 									<br/>
-									<span>Let me ne'er see again. <i epub:type="z3998:stage-direction">Exeunt GRIFFITH and Messenger</i></span>
+									<span>Let me ne'er see again. <i epub:type="z3998:stage-direction">Exeunt GRIFFITH and Messenger.</i></span>
 								</p>
 							</td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter GRIFFITH, with CAPUCIUS</i>
+								<i epub:type="z3998:stage-direction">Re-enter GRIFFITH, with CAPUCIUS.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1083,7 +1083,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">PATIENCE</td>
-							<td>No, madam. <i epub:type="z3998:stage-direction">Giving it to KATHARINE</i></td>
+							<td>No, madam. <i epub:type="z3998:stage-direction">Giving it to KATHARINE.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KATHARINE</td>
@@ -1201,7 +1201,7 @@
 									<br/>
 									<span>A queen, and daughter to a king, inter me.</span>
 									<br/>
-									<span>I can no more. <i epub:type="z3998:stage-direction">Exeunt, leading KATHARINE</i></span>
+									<span>I can no more. <i epub:type="z3998:stage-direction">Exeunt, leading KATHARINE.</i></span>
 								</p>
 							</td>
 						</tr>
