--- a/src/epub/text/act-5.xhtml
+++ b/src/epub/text/act-5.xhtml
@@ -22,7 +22,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter GARDINER, Bishop of Winchester, a Page with a torch before him, met by LOVELL</i>
+								<i epub:type="z3998:stage-direction">Enter GARDINER, Bishop of Winchester, a Page with a torch before him, met by LOVELL.</i>
 							</td>
 						</tr>
 						<tr>
@@ -219,12 +219,12 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LOVELL</td>
-							<td>Many good nights, my lord: I rest your servant. <i epub:type="z3998:stage-direction">Exeunt GARDINER and Page</i></td>
+							<td>Many good nights, my lord: I rest your servant. <i epub:type="z3998:stage-direction">Exeunt GARDINER and Page.</i></td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter KING HENRY VIII and SUFFOLK</i>
+								<i epub:type="z3998:stage-direction">Enter KING HENRY VIII and SUFFOLK.</i>
 							</td>
 						</tr>
 						<tr>
@@ -335,12 +335,12 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
-							<td>Charles, good night. <i epub:type="z3998:stage-direction">Exit SUFFOLK</i></td>
+							<td>Charles, good night. <i epub:type="z3998:stage-direction">Exit SUFFOLK.</i></td>
 						</tr>
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter DENNY</i>
+								<i epub:type="z3998:stage-direction">Enter DENNY.</i>
 							</td>
 						</tr>
 						<tr>
@@ -371,13 +371,13 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">DENNY</td>
-							<td>He attends your highness' pleasure. <i epub:type="z3998:stage-direction">Exit DENNY</i></td>
+							<td>He attends your highness' pleasure. <i epub:type="z3998:stage-direction">Exit DENNY.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">LOVELL</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> This is about that which the bishop spake:</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> This is about that which the bishop spake:</span>
 									<br/>
 									<span>I am happily come hither.</span>
 								</p>
@@ -386,16 +386,16 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Re-enter DENNY, with CRANMER</i>
+								<i epub:type="z3998:stage-direction">Re-enter DENNY, with CRANMER.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Avoid the gallery. <i epub:type="z3998:stage-direction">LOVELL seems to stay</i></span>
+									<span>Avoid the gallery. <i epub:type="z3998:stage-direction">LOVELL seems to stay.</i></span>
 									<br/>
-									<span>Ha! I have said. Be gone. What! <i epub:type="z3998:stage-direction">Exeunt LOVELL and DENNY</i></span>
+									<span>Ha! I have said. Be gone. What! <i epub:type="z3998:stage-direction">Exeunt LOVELL and DENNY.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -403,7 +403,7 @@
 							<td epub:type="z3998:persona">CRANMER</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> I am fearful: wherefore frowns he thus?</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> I am fearful: wherefore frowns he thus?</span>
 									<br/>
 									<span>'Tis his aspect of terror. All's not well.</span>
 								</p>
@@ -423,7 +423,7 @@
 							<td epub:type="z3998:persona">CRANMER</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Kneeling</i> It is my duty</span>
+									<span><i epub:type="z3998:stage-direction">Kneeling.</i> It is my duty</span>
 									<br/>
 									<span>To attend your highness' pleasure.</span>
 								</p>
@@ -476,7 +476,7 @@
 							<td epub:type="z3998:verse">
 								<p>
 									<span>
-										<i epub:type="z3998:stage-direction">Kneeling</i>
+										<i epub:type="z3998:stage-direction">Kneeling.</i>
 									</span>
 									<br/>
 									<span>I humbly thank your highness;</span>
@@ -615,7 +615,7 @@
 									<br/>
 									<span>None better in my kingdom. Get you gone,</span>
 									<br/>
-									<span>And do as I have bid you. <i epub:type="z3998:stage-direction">Exit CRANMER</i></span>
+									<span>And do as I have bid you. <i epub:type="z3998:stage-direction">Exit CRANMER.</i></span>
 									<br/>
 									<span>He has strangled</span>
 									<br/>
@@ -626,12 +626,12 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Old Lady, LOVELL following</i>
+								<i epub:type="z3998:stage-direction">Enter Old Lady, LOVELL following.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Gentleman</td>
-							<td><i epub:type="z3998:stage-direction">Within</i> Come back: what mean you?</td>
+							<td><i epub:type="z3998:stage-direction">Within.</i> Come back: what mean you?</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Old Lady</td>
@@ -689,7 +689,7 @@
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
-							<td>Give her an hundred marks. I'll to the queen. <i epub:type="z3998:stage-direction">Exit</i></td>
+							<td>Give her an hundred marks. I'll to the queen. <i epub:type="z3998:stage-direction">Exit.</i></td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">Old Lady</td>
@@ -705,7 +705,7 @@
 									<br/>
 									<span>I will have more, or else unsay't; and now,</span>
 									<br/>
-									<span>While it is hot, I'll put it to the issue. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>While it is hot, I'll put it to the issue. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -723,7 +723,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter CRANMER</i>
+								<i epub:type="z3998:stage-direction">Enter CRANMER.</i>
 							</td>
 						</tr>
 						<tr>
@@ -743,7 +743,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Keeper</i>
+								<i epub:type="z3998:stage-direction">Enter Keeper.</i>
 							</td>
 						</tr>
 						<tr>
@@ -763,7 +763,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter DOCTOR BUTTS</i>
+								<i epub:type="z3998:stage-direction">Enter DOCTOR BUTTS.</i>
 							</td>
 						</tr>
 						<tr>
@@ -778,11 +778,11 @@
 							<td epub:type="z3998:persona">DOCTOR BUTTS</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> This is a piece of malice. I am glad</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> This is a piece of malice. I am glad</span>
 									<br/>
 									<span>I came this way so happily: the king</span>
 									<br/>
-									<span>Shall understand it presently. <i epub:type="z3998:stage-direction">Exit</i></span>
+									<span>Shall understand it presently. <i epub:type="z3998:stage-direction">Exit.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -790,7 +790,7 @@
 							<td epub:type="z3998:persona">CRANMER</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Aside</i> 'Tis Butts,</span>
+									<span><i epub:type="z3998:stage-direction">Aside.</i> 'Tis Butts,</span>
 									<br/>
 									<span>The king's physician: as he pass'd along,</span>
 									<br/>
@@ -815,7 +815,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter the KING HENRY VIII and DOCTOR BUTTS at a window above</i>
+								<i epub:type="z3998:stage-direction">Enter the KING HENRY VIII and DOCTOR BUTTS at a window above.</i>
 							</td>
 						</tr>
 						<tr>
@@ -872,7 +872,7 @@
 									<br/>
 									<span>Let 'em alone, and draw the curtain close:</span>
 									<br/>
-									<span>We shall hear more anon. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>We shall hear more anon. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -890,7 +890,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chancellor; places himself at the upper end of the table on the left hand; a seat being left void above him, as for CRANMER's seat. SUFFOLK, NORFOLK, SURREY, Chamberlain, GARDINER, seat themselves in order on each side. CROMWELL at lower end, as secretary. Keeper at the door</i>
+								<i epub:type="z3998:stage-direction">Enter Chancellor; places himself at the upper end of the table on the left hand; a seat being left void above him, as for CRANMER's seat. SUFFOLK, NORFOLK, SURREY, Chamberlain, GARDINER, seat themselves in order on each side. CROMWELL at lower end, as secretary. Keeper at the door.</i>
 							</td>
 						</tr>
 						<tr>
@@ -954,7 +954,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">CRANMER enters and approaches the council-table</i>
+								<i epub:type="z3998:stage-direction">CRANMER enters and approaches the council-table.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1268,7 +1268,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Guard</i>
+								<i epub:type="z3998:stage-direction">Enter Guard.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1370,7 +1370,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter KING, frowning on them; takes his seat</i>
+								<i epub:type="z3998:stage-direction">Enter KING, frowning on them; takes his seat.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1413,7 +1413,7 @@
 									<br/>
 									<span>But, whatsoe'er thou takest me for, I'm sure</span>
 									<br/>
-									<span>Thou hast a cruel nature and a bloody. <i epub:type="z3998:stage-direction">To CRANMER</i></span>
+									<span>Thou hast a cruel nature and a bloody. <i epub:type="z3998:stage-direction">To CRANMER.</i></span>
 									<br/>
 									<span>Good man, sit down. Now let me see the proudest</span>
 									<br/>
@@ -1577,7 +1577,7 @@
 									<br/>
 									<span>As I have made ye one, lords, one remain;</span>
 									<br/>
-									<span>So I grow stronger, you more honour gain. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>So I grow stronger, you more honour gain. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1595,7 +1595,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Noise and tumult within. Enter Porter and his Man</i>
+								<i epub:type="z3998:stage-direction">Noise and tumult within. Enter Porter and his Man.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1606,7 +1606,7 @@
 									<br/>
 									<span>take the court for Paris-garden? ye rude slaves,</span>
 									<br/>
-									<span>leave your gaping. <i epub:type="z3998:stage-direction">Within</i></span>
+									<span>leave your gaping. <i epub:type="z3998:stage-direction">Within.</i></span>
 									<br/>
 									<span>Good master porter, I belong to the larder.</span>
 								</p>
@@ -1682,7 +1682,7 @@
 									<br/>
 									<span>Let me ne'er hope to see a chine again</span>
 									<br/>
-									<span>And that I would not for a cow, God save her! <i epub:type="z3998:stage-direction">Within</i></span>
+									<span>And that I would not for a cow, God save her! <i epub:type="z3998:stage-direction">Within.</i></span>
 									<br/>
 									<span>Do you hear, master porter?</span>
 								</p>
@@ -1795,7 +1795,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter Chamberlain</i>
+								<i epub:type="z3998:stage-direction">Enter Chamberlain.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1882,7 +1882,7 @@
 								<p>
 									<span>You i' the camlet, get up o' the rail;</span>
 									<br/>
-									<span>I'll peck you o'er the pales else. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>I'll peck you o'er the pales else. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
@@ -1900,7 +1900,7 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Enter trumpets, sounding; then two Aldermen, Lord Mayor, Garter, CRANMER, NORFOLK with his marshal's staff, SUFFOLK, two Noblemen bearing great standing-bowls for the christening-gifts; then four Noblemen bearing a canopy, under which the Duchess of Norfolk, godmother, bearing the child richly habited in a mantle, etc., train borne by a Lady; then follows the Marchioness Dorset, the other godmother, and Ladies. The troop pass once about the stage, and Garter speaks</i>
+								<i epub:type="z3998:stage-direction">Enter trumpets, sounding; then two Aldermen, Lord Mayor, Garter, CRANMER, NORFOLK with his marshal's staff, SUFFOLK, two Noblemen bearing great standing-bowls for the christening-gifts; then four Noblemen bearing a canopy, under which the Duchess of Norfolk, godmother, bearing the child richly habited in a mantle, etc., train borne by a Lady; then follows the Marchioness Dorset, the other godmother, and Ladies. The troop pass once about the stage, and Garter speaks.</i>
 							</td>
 						</tr>
 						<tr>
@@ -1910,14 +1910,14 @@
 						<tr>
 							<td/>
 							<td>
-								<i epub:type="z3998:stage-direction">Flourish. Enter KING HENRY VIII and Guard</i>
+								<i epub:type="z3998:stage-direction">Flourish. Enter KING HENRY VIII and Guard.</i>
 							</td>
 						</tr>
 						<tr>
 							<td epub:type="z3998:persona">CRANMER</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span><i epub:type="z3998:stage-direction">Kneeling</i> And to your royal grace, and the good queen,</span>
+									<span><i epub:type="z3998:stage-direction">Kneeling.</i> And to your royal grace, and the good queen,</span>
 									<br/>
 									<span>My noble partners, and myself, thus pray:</span>
 									<br/>
@@ -1947,7 +1947,7 @@
 							<td epub:type="z3998:persona">KING HENRY VIII</td>
 							<td epub:type="z3998:verse">
 								<p>
-									<span>Stand up, lord. <i epub:type="z3998:stage-direction">KING HENRY VIII kisses the child</i></span>
+									<span>Stand up, lord. <i epub:type="z3998:stage-direction">KING HENRY VIII kisses the child.</i></span>
 									<br/>
 									<span>With this kiss take my blessing: God protect thee!</span>
 									<br/>
@@ -2115,7 +2115,7 @@
 									<br/>
 									<span>Has business at his house; for all shall stay:</span>
 									<br/>
-									<span>This little one shall make it holiday. <i epub:type="z3998:stage-direction">Exeunt</i></span>
+									<span>This little one shall make it holiday. <i epub:type="z3998:stage-direction">Exeunt.</i></span>
 								</p>
 							</td>
 						</tr>
